Implement the solution to add Storybook to an AEM Headless + React project

--- a/mysite/ui.frontend/package.json
+++ b/mysite/ui.frontend/package.json
@@ -12,7 +12,9 @@
     "deploy-ssr-ioruntime": "cross-env NODE_ENV=production aio app deploy",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sync": "aemsync -d -w ../ui.apps/src/main/content"
+    "sync": "aemsync -d -w ../ui.apps/src/main/content",
+    "storybook": "start-storybook -p 6006 -s public",
+    "build-storybook": "build-storybook -s public"
   },
   "dependencies": {
     "@adobe/aio-sdk": "^3.0.0",
@@ -37,41 +39,60 @@
     "react-universal-component": "^4.5.0"
   },
   "devDependencies": {
-    "cross-env": "^7.0.3",
     "@adobe/aio-cli": "^8.2.0",
     "@openwhisk/wskdebug": "^1.3.0",
-    "babel-core": "^6.26.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
+    "@storybook/addon-actions": "^6.4.22",
+    "@storybook/addon-essentials": "^6.4.22",
+    "@storybook/addon-interactions": "^6.4.22",
+    "@storybook/addon-links": "^6.4.22",
+    "@storybook/node-logger": "^6.4.22",
+    "@storybook/preset-create-react-app": "^3.2.0",
+    "@storybook/react": "^6.4.22",
+    "@storybook/testing-library": "0.0.9",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "aem-clientlib-generator": "^1.5.0",
     "aemsync": "^4.0.0",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.15.1",
-    "sinon": "^7.5.0",
     "ajv": "^6.10.0",
+    "babel-core": "^6.26.2",
+    "babel-plugin-universal-import": "^4.0.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "clean-webpack-plugin": "^0.1.19",
     "clone": "^2.1.2",
+    "core-js": "^3.21.1",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.4.2",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
     "ignore-styles": "^5.0.1",
+    "react-scripts": "4.0.3",
     "sass-loader": "^6.0.7",
+    "sinon": "^7.5.0",
     "style-loader": "^0.20.3",
     "typescript": "^3.4.2",
     "webpack": "4.44.2",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "3.11.1",
     "webpack-node-externals": "^1.7.2",
-    "webpack-shell-plugin": "^0.5.0",
-    "babel-plugin-universal-import": "^4.0.0",
-    "react-scripts": "4.0.3"
+    "webpack-shell-plugin": "^0.5.0"
   },
   "proxy": "http://localhost:4502",
   "browserslist": [
     "defaults"
   ],
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "overrides": [
+      {
+        "files": [
+          "**/*.stories.*"
+        ],
+        "rules": {
+          "import/no-anonymous-default-export": "off"
+        }
+      }
+    ]
   }
 }
