--- a/mysite/ui.frontend/.env.development
+++ b/mysite/ui.frontend/.env.development
@@ -20,7 +20,8 @@
 # prepended to paths in the `asset-manifest.json` file)
 PUBLIC_URL=/
 REACT_APP_PROXY_ENABLED=true
-REACT_APP_PAGE_MODEL_PATH=/content/mysite/us/en.model.json
+REACT_APP_PAGE_MODEL_PATH=/content/mysite/sandbox/components/button/button--primary.json
+# REACT_APP_PAGE_MODEL_PATH=/content/mysite/sandbox/components/button/button--text.json
 REACT_APP_API_HOST=http://localhost:4502
 REACT_APP_AEM_AUTHORIZATION_HEADER='Basic YWRtaW46YWRtaW4='
 REACT_APP_ROOT=/content/mysite/us/en/home.html
