--- a/mysite/ui.frontend/package.json
+++ b/mysite/ui.frontend/package.json
@@ -49,6 +49,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@storybook/react": "^6.4.22",
     "@storybook/testing-library": "0.0.9",
+    "@storybook/testing-react": "^1.2.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
